force-app/main/default/objects/DvsAccountInfo__c/DvsAccountInfo__c.object-meta.xml
<CustomObject>
    <label>Dvs Account Info</label>
    <nameField>
        <label>Dvs Account Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dvs Account Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>