force-app/main/default/objects/DvsAccountInfo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DVS Account Info</relationshipLabel>
    <relationshipName>DVSAccountInfo</relationshipName>
    <type>Lookup</type>
</CustomField>