force-app/main/default/objects/DvsAccountInfo__c/fields/PreviousCity__c.field-meta.xml
<CustomField>
    <fullName>PreviousCity__c</fullName>
    <label>Previous City</label>
    <length>175</length>
    <type>Text</type>
</CustomField>