force-app/main/default/objects/DvsAccountInfo__c/fields/PreviousId1__c.field-meta.xml
<CustomField>
    <fullName>PreviousId1__c</fullName>
    <label>Previous Id1</label>
    <length>175</length>
    <type>Text</type>
</CustomField>