force-app/main/default/objects/DvsAccountInfo__c/fields/PreviousId2__c.field-meta.xml
<CustomField>
    <fullName>PreviousId2__c</fullName>
    <label>Previous Id2</label>
    <length>175</length>
    <type>Text</type>
</CustomField>