force-app/main/default/objects/DvsAccountInfo__c/fields/PreviousName__c.field-meta.xml
<CustomField>
    <fullName>PreviousName__c</fullName>
    <label>Previous Name</label>
    <length>175</length>
    <type>Text</type>
</CustomField>