force-app/main/default/objects/DvsAccountInfo__c/fields/PreviousPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PreviousPostalCode__c</fullName>
    <label>Previous PostalCode</label>
    <length>175</length>
    <type>Text</type>
</CustomField>