force-app/main/default/objects/DvsAccountInfo__c/fields/PreviousStreet__c.field-meta.xml
<CustomField>
    <fullName>PreviousStreet__c</fullName>
    <label>Previous Street</label>
    <length>175</length>
    <type>Text</type>
</CustomField>