force-app/main/default/objects/DvsAccountInfo__c/fields/ProcessedTime__c.field-meta.xml
<CustomField>
    <fullName>ProcessedTime__c</fullName>
    <label>Processed Time</label>
    <type>DateTime</type>
</CustomField>