force-app/main/default/objects/DvsAccountInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>PreviousName__c</columns>
    <columns>PreviousId1__c</columns>
    <columns>PreviousId2__c</columns>
    <columns>PreviousStreet__c</columns>
    <columns>PreviousPostalCode__c</columns>
    <columns>PreviousCity__c</columns>
    <columns>ProcessedTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>